# kg-rag-multihop

./: .gitignore  BASELINE.md  DEFENSIBILITY_REGROW.md  EXTRACTION_BASELINE.md  GRAPH_BUILD.md  LICENSE  README.md  THESIS_RESULT.md  THESIS_RESULT_v2.md  justfile  pyproject.toml
.github/workflows/: ci.yml
data/graph/v1/: chunk_ids.json  manifest.json
data/processed/: corpus.jsonl  corpus_stats.json
data/processed/extraction/: attempted_chunk_ids.txt  graph_corpus_ids.txt  predictions.jsonl  predictions_corpus.jsonl  predictions_gold_postfix.jsonl  timed_out_chunk_ids.txt
data/processed/resolution/: entities.jsonl  merge_audit.txt  merge_audit_v2.txt  merge_audit_v2_dump.txt  triples_resolved.jsonl
docs/: data.js  index.html
gold/: ANNOTATION_GUIDELINE.md  alias_table.json  extraction_gold.jsonl  matcher_validation.jsonl  no_knowledge.jsonl  questions.jsonl  relation_synonyms.json  test_ids.txt
scripts/: export_demo_data.py
src/kgrag/: config.py  ollama_client.py
src/kgrag/baseline/: corpus_io.py  embed.py  generate.py  index.py  retrieve.py  run_baseline.py
src/kgrag/eval/: extract_triples.py  extraction_eval.py  extraction_eval_postfix.py  judge.py  metrics.py  run_eval.py  triple_matcher.py  validate_matcher.py  verify_extraction.py  verify_repro.py
src/kgrag/graph/: audit_merges.py  build_graph.py  eval_kgrag.py  extract_corpus.py  kg_retrieve.py  make_graph_scope.py  query_link.py  relation_norm.py  resolve_entities.py  run_kgrag.py  traverse.py  verify_graph.py  verify_kgrag.py
src/kgrag/ingest/: build_corpus.py  check_ollama.py  download.py
