[project]
name = "kg-rag-multihop"
version = "0.1.0"
description = "Knowledge-Graph RAG for multi-hop QA — Phase P0: frozen corpus, gold set, and a measured flat-RAG baseline over 2WikiMultiHopQA."
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "faiss-cpu>=1.8,<2",
    "rank-bm25>=0.2.2,<0.3",
    "sentence-transformers>=3,<4",
    "datasets>=2.19,<3",
    "numpy>=1.26,<2",
    "requests>=2.31,<3",
    "tqdm>=4.66,<5",
    "gliner>=0.2.26",
    "kuzu>=0.11.3",
    "rapidfuzz>=3.14.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kgrag"]
